2005-11-02  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c: use g_utf8_strlen().

	* plug-ins/uri/uri-backend-wget.c: use ngettext().

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpprocbrowserdialog.c
	* libgimpwidgets/gimppropwidgets.c
	* plug-ins/uri/uri-backend-wget.c: use dngettext() for plural
	forms. Fixes bug #320460, bug #320461 and bug #320462.

2005-11-02  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpclipboard.[ch] (gimp_clipboard_set_text): clear
	the GIMP clipboard. Suppress debug output unless gimp is started
	with the --verbose command-line option.

	* app/actions/data-commands.c
	* app/actions/documents-commands.c: adapt to clipboard API change.

2005-11-02  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c
	* plug-ins/uri/uri-backend-wget.c: added translator comments for
	plural forms (bug #320461 and bug #320462).

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsizebox.[ch]: added a GtkSizeGroup member and put
	all labels into the group.

	* app/dialogs/scale-dialog.c: put the "Interpolation:" label into
	the same size box.

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpprocbrowserdialog.c (browser_search): added comment
	that _("%d procedures") should be translated with a plural form
	for *lots* of procedures. Fixes bug #320460.

2005-11-01  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrushgenerated.c: fixed compiler warning.

	* app/core/gimpobject.c: turned "name" into a construct property.

2005-11-01  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrushgenerated.c (gimp_brush_generated_load): use
	gimp_brush_generated_new() to create the brush object. Removed
	redundant calls to gimp_data_dirty().

	* app/core/gimpdata.c: freeze the data object during construction.

2005-11-01  Sven Neumann  <sven@gimp.org>

	* app/actions/data-commands.c
	* app/actions/documents-commands.c
	* app/widgets/gimpclipboard.[ch]: moved text clipboard handling to