@@ -1,5 +1,10 @@
 2005-11-02  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimppattern.c: rephrased error message for consistency
+	and to avoid another plural form.
+
+2005-11-02  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimppropwidgets.c: use g_utf8_strlen().
 
 	* plug-ins/uri/uri-backend-wget.c: use ngettext().
